# Vesty

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  audiounitconfig.h  cmakexcode.sh
macOS/Resources/: Info.plist
macOS/Sources/: ViewController.h  ViewController.m
resource/: editor.uidesc
source/: cids.h  entry.cpp  version.h
source/controller/: controller.cpp  controller.hpp  view.hpp
source/processor/: processor.cpp  processor.hpp
